--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+	"start": "node ./bin/www"
   },
   "dependencies": {
 	"azure": "~0.9.15",
@@ -12,6 +12,6 @@
     "express": "~4.8.6",
 	"ejs": "~1.0.0",
 	"html": "~0.0.7",
-    "debug": "~1.0.4",
+    "debug": "~1.0.4"
   }
 }
