add upload product page
possibilité d'ajouter un produit selon le type de connexion (via portail
ou direct).

--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
   },
   "dependencies": {
 	"azure": "~0.9.15",
+  "body-parser": "1.8.2",
 	"adm-zip": "~0.4.4",
-    "express": "~4.8.6",
+  "express": "~4.8.6",
 	"ejs": "~1.0.0",
-	"html": "~0.0.7"
+  "formidable": "1.0.15",
+	"html": "~0.0.7",
+  "jsonfile": "2.0.0",
+  "util": "0.10.3"
   }
 }
